--- a/style.css
+++ b/style.css
@@ -45,8 +45,6 @@ main {
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
-
-    margin: 20px 0;
 }
 
 h3 {
@@ -67,11 +65,12 @@ p {
 
 .slot-ocupado {
     display: flex;
-    padding: 12px;
+    padding: 19px;
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
     border: 1.5px solid;
+    width: 90%;
 }
 
 .slot-ocupado h3 {
@@ -198,7 +197,7 @@ dialog {
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
 
-    margin: auto auto;
+    margin: 50px auto;
     padding: 30px 20px;
     position: relative;
 }
